--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,28 +2,27 @@ name: Python Lint
 
 on:
   pull_request:
-    branches:
-      - main  
+    branches: [main]  # oder dein Hauptbranch
 
 jobs:
   lint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'  
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pylint
-          pip install -r requirements.txt 
+          pip install -r requirements.txt  # falls vorhanden
 
-      - name: Run pylint
+      - name: Run pylint with custom config
         run: |
-          pylint $(git ls-files '*.py')
+          pylint --disable=E1101 $(git ls-files '*.py')
