--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,11 +1,11 @@
-name: Python Lint
+name: Python CI (Lint & Test)
 
 on:
   pull_request:
     branches: [main]  # oder dein Hauptbranch
 
 jobs:
-  lint:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,9 +20,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
-          pip install -r requirements.txt  # falls vorhanden
+          pip install -r requirements.txt
+          pip install pylint pytest  # ggf. weitere dev-Tools hier ergänzen
 
       - name: Run pylint with custom config
         run: |
           pylint --disable=E1101 $(git ls-files '*.py')
+
+      - name: Run unit tests with pytest
+        run: |
+          pytest
