--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,4 +1,4 @@
-name: Python CI (Lint & Test)
+name: Python CI (Lint & Token-Test)
 
 on:
   pull_request:
@@ -21,12 +21,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pylint pytest  # ggf. weitere dev-Tools hier ergänzen
+          pip install pylint pytest
 
       - name: Run pylint with custom config
         run: |
           pylint --disable=E1101 $(git ls-files '*.py')
 
-      - name: Run unit tests with pytest
+      - name: Run only token_test.py
         run: |
-          pytest
+          pytest Tests/token_test.py
