--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,7 +2,7 @@ name: Python CI (Lint & Token-Test)
 
 on:
   pull_request:
-    branches: [main]  # oder dein Hauptbranch
+    branches: [main] 
 
 jobs:
   lint-and-test:
@@ -17,16 +17,16 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install dependencies from requirements.txt
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pylint pytest
+          pip install pylint  # Nur pylint separat, da nicht in requirements.txt
 
       - name: Run pylint with custom config
         run: |
           pylint --disable=E1101 $(git ls-files '*.py')
 
-      - name: Run only token_test.py
+      - name: Run unit test: token_test.py only
         run: |
-          pytest Tests/token_test.py
+          PYTHONPATH=. pytest Tests/token_test.py
