--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  lint:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,12 +17,16 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install dependencies from requirements.txt
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
           pip install -r requirements.txt
+          pip install pylint  
 
       - name: Run pylint with custom config
         run: |
           pylint --disable=E1101 $(git ls-files '*.py')
+
+      - name: Run unit test: token_test.py only
+        run: |
+          PYTHONPATH=. pytest Tests/token_test.py
