--- a/.github/workflows/token_test.yml
+++ b/.github/workflows/token_test.yml
@@ -24,5 +24,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run token_test.py
+        env:
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           pytest Tests/token_test.py
